<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_400"
    tools:context=".activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:cardBackgroundColor="@color/grey_400"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/main_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_cover_description"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            android:scaleX="0.95"
            android:scaleY="0.95"
            app:srcCompat="@drawable/cover" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/text_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_upper_rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <EditText
            android:id="@+id/et_email_form"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/space"
            android:layout_marginStart="@dimen/space"
            android:layout_marginTop="@dimen/space"
            android:layout_marginEnd="@dimen/space"
            android:background="@drawable/bg_black_button"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/bitter_regular"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="32dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_400"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            tools:ignore="TextContrastCheck,TextFields" />

        <TextView
            android:id="@+id/title_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/bodoni_bold"
            android:text="@string/finance_app"
            android:textColor="@color/black"
            android:textSize="38sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_password_form"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/space"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_black_button"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/bitter_regular"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingHorizontal="32dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_400"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_form"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_authenticateLogin"
            style="@style/main_button"
            android:layout_marginHorizontal="@dimen/space"

            android:layout_marginBottom="@dimen/space"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_black_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_app"
            app:srcCompat="@drawable/ic_app_foreground"
            tools:ignore="contentDescription" />

        <Switch
            android:id="@+id/sw_keep_login"
            android:text="@string/keep_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password_form"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            style="@style/switch_main" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>