<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FinanceActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:contentDescription="@string/logout"
        app:srcCompat="@drawable/ic_logout"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="8dp"
        android:theme="@style/Theme.EP3.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="@dimen/space"
                android:backgroundTint="@color/light_grey"
                app:cardCornerRadius="48dp">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/profile_photo"
                    android:scaleType="fitCenter"
                    android:scaleX=".9"
                    android:scaleY=".9"
                    android:src="@drawable/ic_person"
                    tools:ignore="ImageContrastCheck" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_user_name"
                style="@style/text_header_bodoni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/space"
                android:text="@string/app_name" />

        </LinearLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:tabIndicatorGravity="bottom"
            app:tabTextAppearance="@style/text_small_header_bodoni"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:ignore="SpeakableTextPresentCheck">

    </androidx.viewpager2.widget.ViewPager2>

</androidx.coordinatorlayout.widget.CoordinatorLayout>